# talos

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yaml
.github/workflows/: release.yml  tests.yml
config/: storage-git.json  storage.json
talos-bunker/: Cargo.toml  Dockerfile  entrypoint.sh  reveal-backup.sh
talos-bunker/src/: gpg.rs  init.rs  main.rs
talos-storage/: Cargo.toml  Dockerfile  entrypoint.sh
talos-storage/src/: config.rs  handlers.rs  init.rs  integration_test.rs  main.rs  models.rs
talos-web/: Cargo.toml  Dockerfile  entrypoint.sh  gen_certs.sh
talos-web/src/: auth.rs  db.rs  handlers.rs  main.rs  state.rs
talos-web/static/: index.html  script.js  style.css
talos-web/static/js/: api.js  app.js  ui.js
