[package]
name = "talos-storage"
version = "1.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["fs", "limit"] }
once_cell = "1.19"
zip = "0.6"
walkdir = "2.4"
base64 = "0.22"
chrono = "0.4"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
wiremock = "0.5"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"